Podemos navegar a la páginas de post relacionados con un author

--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -16,4 +16,7 @@
 |~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~|
 -->
 
-<post-preview *ngFor="let post of posts" [post]="post"></post-preview>
+<post-preview *ngFor="let post of posts" 
+            [post]="post" 
+            (postSeleccionado)="notificacionPostSeleccionado($event)" 
+            (authorSeleccionado)="mostrarPostsRelacionados($event)"></post-preview>
