--- a/src/app/post-form/post-form.component.html
+++ b/src/app/post-form/post-form.component.html
@@ -7,7 +7,7 @@
 | referencia del formulario en él.                                                            |
 |~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~|
 -->
-<form ngForm #post="ngForm" (ngSubmit)="submitPost(post)">
+<form ngForm #postForm="ngForm" (ngSubmit)="submitPost(post)">
   <!--
   |~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~|
   | Purple Path                                                                                     |
@@ -19,7 +19,7 @@
   <input type="text"
          placeholder="Título"
          class="u-full-width"
-         ngModel
+         [(ngModel)]= "post.title"
          name="title"
          #title="ngModel"
          required>
@@ -33,7 +33,7 @@
   -->
   <textarea placeholder="Introduce tu historia"
             class="u-full-width georgia-font"
-            ngModel
+            [(ngModel)] = "post.intro"
             name="intro"
             #intro="ngModel"
             autogrow
@@ -49,11 +49,11 @@
   <textarea placeholder="Cuenta tu historia"
             class="u-full-width georgia-font"
             autogrow
-            ngModel
+            [(ngModel)] = "post.body"
             name="body"
             #body="ngModel"
             required></textarea>
-  <div>
+  <div *ngIf="!edit">
     <div>
       <label (click)="setScheduling(false)">
         <span class="radio-input" [class.active]="!_publicationDateScheduled"></span>
@@ -81,6 +81,9 @@
   | válido. Para ello vas a necesitar acceder al 'FormGroup' del formulario. |
   |~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~|
   -->
-  <button type="submit"
-          class="button-primary u-pull-right" [disabled]="post.invalid">Publicar</button>
+
+  <button *ngIf="!edit" type="submit"
+          class="button-primary u-pull-right" [disabled]="postForm.invalid">Publicar</button>
+  <button *ngIf="edit" type="submit"
+          class="button-primary u-pull-right" [disabled]="postForm.invalid">Editar</button>
 </form>
