--- a/src/app/header-bar/header-bar.component.html
+++ b/src/app/header-bar/header-bar.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="u-pull-right">
-    <search-box></search-box>
+    <search-box (onSearch)="goToPostsSearch($event)"></search-box>
   </div>
   <div class="u-pull-right action-link">
     <!--
